src/test/ui/issues/issue-32119.stderr
error: compilation successful
  --> $DIR/issue-32119.rs:19:1
   |
LL | fn main() {} //~ ERROR compilation successful
   | ^^^^^^^^^^^^

error: aborting due to previous error

